2012-03-01  pauljohn  <pauljohn@pjlap-124.ku.edu>

	* ../R/meanCenter.R (std): Found really bad bug where
	plotPlane(meanCenter) returned error about predict being
	used for wrong type of data. Problem traced back to fact
	that "scale" returns a matrix with 1 column, rather than
	a numeric vector, so dataClasses was mismatched. 
	attr(,"dataClasses")
          y         xxx         x22 
	"numeric" "nmatrix.1" "nmatrix.1".  The "newdata" I'd
	generate did not have "nmatrix.1" as the type, and so
	predict's use of .MFCheckClass resulted in failure.
	Like others, I say "How aggravating."

2012-02-01  pauljohn  <pauljohn@pjlap-124.ku.edu>

	* ../R/plotSlopes.R (plotSlopes): "std.dev." and "quantile" now
	legal strings for modxVals, along with particular values.

2012-01-30  pauljohn  <pauljohn@pjlap-124.ku.edu>

	* ../R/plotPlane.R (plotPlane.default): correct typos referring to plotSlopes

	* ../R/plotSlopes.R (plotSlopes): add na.rm=TRUE for range commands

2012-01-25  pauljohn  <pauljohn@pjlap-124.ku.edu>

	* ../R/plotSlopes.R (plotSlopes): change return value to include newdf

2012-01-09  pauljohn  <pauljohn@pjlap-124.ku.edu>

	* ../R/lmrc.R (makeRCformula): weird. data from residuals turns up
	with class "AsIs" and causes all kinds of confusion later
	* residualCenter now a generic method
	* residualCenter.default should work for any glm or lm.

2012-01-03  pauljohn  <pauljohn@pjlap-124.ku.edu>

	* ../R/meanCenter.R (std): create class name for mean centered
	regression, add attributes.
	print.mcreg: new method

2011-12-30  pauljohn  <pauljohn@pjlap-124.ku.edu>

	* ../R/plotPlane.R (carrier.name): use get_all_vars to build emf

2011-12-28  pauljohn  <pauljohn@pjlap-124.ku.edu>

	* ../R/plotPlane.R: insert plotPoints option to suppress plotting
	of points.  Question. Should plotPoints=FALSE force drawArrows=FALSE?

2011-12-12  pauljohn  <pauljohn@pjlap-124.ku.edu>

	* ../R/plotSeq.R: allow x to be a factor, return levels if so
