@@ -21,10 +21,11 @@ import(car)
 import(MASS)
 S3method(meanCenter,default)
 S3method(plotPlane,default)
+S3method(predict,rcreg)
 S3method(print,mcreg)
 S3method(print,stdreg)
-S3method(print,summary,mcreg)
-S3method(print,summary,stdreg)
+S3method(print,summary.mcreg)
+S3method(print,summary.stdreg)
 S3method(residualCenter,default)
 S3method(standardize,lm)
 S3method(summary,mcreg)
